--- a/index.html
+++ b/index.html
@@ -36,15 +36,24 @@
 	Textues & Patterns 
 	* Add more textures or patterns
 -->
-	<section class="grid-container">
+		<section class="grid-container">
 		<h2>Textures/Patterns</h2>
-		<div class="pattern-1"></div>
-		<div class="pattern-2"></div>
-		<div class="pattern-3"></div>
-		<div class="pattern-4"></div>
-		<div class="pattern-5"></div>
+		<div class="pattern-1">
+        <img src="img/texture1.jpg">
+        </div>
+		<div class="pattern-2">
+        <img src="img/texture2.jpg">
+        </div>
+		<div class="pattern-3">
+        <img src="img/texture3.jpg">
+        </div>
+		<div class="pattern-4">
+        <img src="img/texture4.jpg">
+        </div>
+		<div class="pattern-5">
+        <img src="img/texture5.jpg">
+        </div>
 	</section>
-
 <!-- 
 	Imagery
 -->
