--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <!-- Secondary Navigation -->	
 	<section class="grid-6">
-		<h2>Secondary Navigation</h2>
+		<h2>Primary Navigation</h2>
 		<nav role='navigation'>
 		  <ul>
 		    <li><a href="#">Home</a></li>
@@ -133,6 +133,7 @@
 		<p><a href="#">Text Link</a></p>
 		<p><button>Link Button</button></p>
 
+
 	</section>
 
 
@@ -144,7 +145,8 @@
 	<section class="grid-container">
 		
 		<!--  Typography Option 1 -->
-		<section class="grid-3">				
+		<section class="grid-3">
+            <section class="type1">
 
 			<h2>Typography A</h2>
 
@@ -162,15 +164,17 @@
 			tempor incididunt ut <a href="#">labore et</a>dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 			</p>
 
-		</section>
+		</section></section>
 
 		<!--  Typography Option 2 -->
-		<section class="grid-3">				
 
+		<section class="grid-3">
+            
+<section class="type2">
 			<h2>Typography B</h2>
 
 			<h2>Primary Header</h2>
-			<p>Font name, variant, color, etc</h2>
+			<p>Copper, variant, color, etc</h2>
 			
 
 			<h3>Secondary Header</h3>
@@ -184,7 +188,7 @@
 			</p>
 			
 
-		</section>
+		</section></section>
 
 		<!-- Form & Tables -->
 		<section class="grid-3">
@@ -193,7 +197,7 @@
 			<label for="sample">Field Label</label>
 			<input type="text" name="sample" placeholder="sample" />
 			<button class="button-a">Button A</button>
-			<button class="button-a">Button B</button>
+			<button class="button-b">Button B</button>
 			
 			<h2>Table</h2>
 			<table>
